# acados

./: data_rodyman_17-Jun-2022 10:02:43.mat  data_rodyman_20-Jun-2022 18:05:27.mat  data_rodyman_20-Jun-2022 18:10:01.mat  data_rodyman_20-Jun-2022 18:27:18.mat  data_rodyman_20-Jun-2022 18:29:48.mat  data_rodyman_20-Jun-2022 18:34:10.mat  data_rodyman_20-Jun-2022 18:38:44.mat  data_rodyman_20-Jun-2022 19:13:35.mat  data_rodyman_20-Jun-2022 19:18:26.mat  data_rodyman_20-Jun-2022 19:24:23.mat  plot_results.m  q_log.txt  q_log_20-Jun-2022 18:05:27.txt  q_log_20-Jun-2022 18:23:03.txt  q_log_20-Jun-2022 18:25:30.txt  q_log_20-Jun-2022 18:27:18.txt  q_log_20-Jun-2022 18:29:48.txt  q_log_20-Jun-2022 18:34:10.txt  q_log_20-Jun-2022 19:13:35.txt  q_log_20-Jun-2022 19:18:26.txt  q_log_20-Jun-2022 19:24:23.txt  q_log_f20-Jun-2022 18:05:27.txt  q_log_f20-Jun-2022 18:10:01.txt  q_log_f20-Jun-2022 18:23:03.txt  q_log_f20-Jun-2022 18:25:30.txt  q_log_f20-Jun-2022 18:27:18.txt  q_log_f20-Jun-2022 18:29:48.txt  q_log_f20-Jun-2022 18:34:10.txt  q_log_f20-Jun-2022 18:38:44.txt  q_log_f20-Jun-2022 19:13:35.txt  q_log_f20-Jun-2022 19:18:26.txt  q_log_f20-Jun-2022 19:24:23.txt  q_log_f20-Jun-2022 19:27:25.txt
examples/acados_matlab_octave/object/c_generated_code/: CMakeLists.txt  acados_mex_create_ocp_model.c  acados_mex_free_ocp_model.c  acados_mex_set_ocp_model.c  acados_mex_solve_ocp_model.c  acados_sim_solver_ocp_model.c  acados_sim_solver_ocp_model.h  acados_sim_solver_sfunction_ocp_model.c  acados_solver_ocp_model.c  acados_solver_ocp_model.h  acados_solver_sfunction_ocp_model.c  ref.txt  (+11 more)
(+300 files in other folders)
